# StateFuzz

./: Dockerfile  README  README.md  build.sh  start.sh
difuze/: README.md
difuze/helper_scripts/: collect-dvRangeList.sh  interface_manual_linux.csv  interface_manual_msm.csv  parse_interface_output.py  parse_interface_to_svCollector.py  parse_interface_to_syzkaller.py  parse_interface_to_syzkaller_errorhandle.py  parse_interface_with_manual_interface.py  run_all.py
linux-patches/: Makefile.kcov.patched  config_syzbot  config_syzbot_kasan  kcov.c.patched  kcov_pixel4.c
scripts/: kill_timeout.sh  parse_svCollector_output.py  parse_sv_name.py  parse_sv_range.sh  parse_sv_range_to_statefuzz.py  parse_svf_output.py  sv_paris_generator.py  svf_find_sv_alias.py
statefuzz/: Makefile  go.mod  go.sum  my.cfg
statefuzz/executor/: defs.h  executor.cc  executor_bsd.h  executor_linux.h  gen.go  nocover.h  syscalls.h
statefuzz/prog/: analysis.go  clone.go  generation.go  hints.go  mutation.go  prio.go  prog.go  rand.go  target.go
statefuzz/syz-ci/: manager.go  updater.go
statefuzz/syz-fuzzer/: fuzzer.go  proc.go  testing.go
statefuzz/syz-manager/: html.go  manager.go  rpc.go  stats.go
sv-collector/: .gitignore  ChangeLog  Makefile  Makefile.inc  run.sh
sv-collector/src/lib/: Annotation.cpp  Annotation.h  CMakeLists.txt  CRange.h  CallGraph.cpp  CallGraph.h  Common.cpp  Common.h  Flags.h  Global.h  KAMain.cpp  Pass.h  Range.cpp  Range.h  StateVariableAnalysis.cpp  StateVariableAnalysis.h  StructAnalyzer.cpp  StructAnalyzer.h
svf/: CMakeLists.txt  build.sh
(+640 files in other folders)
